--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,10 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "Saitamaar";
+  src: url('../fonts/Saitamaar-Regular.woff2') format("woff2");
+}
 
 body {
   background-color: #111111
@@ -18,6 +22,7 @@ h1 {
   font-family: 'omori', sans-serif;
   letter-spacing: 0.3rem;
   font-size: 7vh;
+  transform: translateY(-7vh); 
   text-shadow: 
     -2px -2px 0 #000,  
      2px -2px 0 #000,  
@@ -29,9 +34,14 @@ h1 {
      0px  2px 0 #000;
 }
 
+#specialHeader {
+  transform: translateY(0vw); 
+}
+
 .content {
   color: white;
-  font-family: Verdana;
+  font-family: "Saitamaar";
+  font-size: 20px;
 }
 
 .background {
@@ -55,18 +65,64 @@ h1 {
 left: 100vw; /* positioned offscreen to the right */
 }
 
-#viewport-container
-{
+#viewport-container {
 width: 100vw;
 height: 100vh;
-position: relative;
+position: fixed;
 }
 
-#bottom-right-message
-{
+#bottom-right-message {
   right: 0;
   bottom: 0;
   position: absolute;
   padding: 30px;
-  font-family: monospace;
+  padding-bottom: 50px; 
+  color: white;
+  font-family: "Saitamaar";
+  font-size: 20px;
+}
+
+#onePxOutline {
+  text-shadow: 
+  -1px -1px 0 #fff,  
+   1px -1px 0 #fff,  
+  -1px  1px 0 #fff,  
+   1px  1px 0 #fff,  
+  -1px  0px 0 #fff,  
+   1px  0px 0 #fff,  
+   0px -1px 0 #fff,  
+   0px  1px 0 #fff;
+}
+
+#backButton {
+  width: 6vw;  
+  height: auto;  /* auto scale height */
+  transform: translate(4vw, -30vh)
+}
+
+#backButton:hover {
+  content: url('../images/lightbulbExtendedHover.png');
+  transform: translate(4vw, -29vh); 
+}
+
+.contentBox {
+  width: 60vw;
+  height: 100vh;
+  transform: translate(17.5vw, -5vh);     
+  background-color: rgba(24, 10, 31, 0.7);
+  position: fixed;
+  border-radius: 25px;
+  padding: 80px;
+}
+
+#backText {
+  font-family: 'omori', sans-serif;
+  letter-spacing: 0.3rem;
+  font-size: 4vh;
+  color: white;
+  transform: translateX(10vw);
+}
+
+.backButtonContainer {
+  position: fixed;
 }
