--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,8 +40,10 @@ h1 {
 
 .content {
   color: white;
-  font-family: "Saitamaar";
+  font-family: "Saitamaar", sans-serif;
   font-size: 20px;
+  z-index: 1;
+  position: relative;
 }
 
 .background {
@@ -80,7 +82,7 @@ left: 100vw; /* positioned offscreen to the right */
   padding: 30px;
   padding-bottom: 50px; 
   color: white;
-  font-family: "Saitamaar";
+  font-family: "Saitamaar", sans-serif;
   font-size: 20px;
   pointer-events: auto; /* mouse input taken */
 }
